sample-app/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample
  labels:
    app: nginx-sample
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx-sample
